--- a/style.css
+++ b/style.css
@@ -235,23 +235,27 @@
   /* Responsive styles for frontpage */
   @media (max-width: 1100px) {
     .frontpage {
+      
       overflow-y: hidden;
       flex-direction: column;
-      height: 150vh;
+      height: 120vh;
       padding-top: 100px;
       
     }
   
     .front {
+      
       margin-left: 0px;
       margin-bottom: 50px;
       justify-content: center;
       align-items: center;
       overflow: hidden;
+      
     }
     
     .front p {
       height: 650px;
+      
     }
     .rotating_text {
       
@@ -291,13 +295,14 @@
   }
   
   /* Responsive styles for smaller screens */
-  @media (max-width: 675px) {
+  @media (max-width: 1000px) {
     .frontpage {
       height: auto;
       margin-top: 100px;
     }
   
     .front {
+      margin-top: -100px;
       margin-left: 0;
       margin-bottom: 0px;
       font-size: clamp(50px, 4vw, 60px);
@@ -726,6 +731,7 @@
   }
   
   .invitation {
+   
     margin-top: 230px;
     margin-bottom: 90px;
     height: 80vh;
@@ -738,7 +744,7 @@
   
   @media (max-width: 1100px) {
     .invitation{
-      height: 52vh;
+      height: 90vh;
       margin-top: 40px;
       margin-bottom: 40px;
     }
@@ -761,7 +767,7 @@
   @media (max-width: 1100px) {
     .perspective-text{
       margin-top: 50px;
-      margin-bottom: 50px;
+      margin-bottom: 100px;
       padding-top: 0;
       transform: scale(1.6);
     }
@@ -769,6 +775,7 @@
   @media (max-width: 550px){
     .perspective-text{
       transform: scale(1);
+      margin-bottom: 400px;
     }
   }
   .perspective-line {
