--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@
   
   .menu_items_burger ul a {
     text-decoration: none;
-    color: var(--kindagrey)
+    color: var(--kindayellow)
   }
   
   
@@ -589,7 +589,7 @@
   
   }
   .photo_title {
-   
+    
     color: var(--kindagrey);
     font-family: var(--roboto);
     font-size: 18px;
@@ -598,9 +598,11 @@
     align-content: flex-start;
     align-items: flex-start;
     justify-content:flex-start;
+    
     z-index: 6;
     top: 0;
   }
+ 
   
   .photo {
     z-index: 6;
@@ -624,7 +626,7 @@
       z-index: 7;
       top: 0;
       left: 30%;
-      align-items: flex-end;
+      align-items: flex-start;
     }
     .photo{
       padding-top: 100px;
@@ -744,7 +746,7 @@
   
   @media (max-width: 1100px) {
     .invitation{
-      height: 80vw;
+      height: 70vw;
       margin-top: 40px;
       margin-bottom: 40px;
     }
