--- a/style.css
+++ b/style.css
@@ -625,7 +625,7 @@
       font-size: 5vw;
       z-index: 7;
       top: 0;
-      left: 30%;
+      left: 10%;
       align-items: flex-start;
     }
     .photo{
@@ -749,6 +749,11 @@
       height: 70vw;
       margin-top: 40px;
       margin-bottom: 40px;
+    }
+  }
+  @media (max-width: 800px){
+    .invitation {
+      height: 80vw;
     }
   }
   .perspective-text {
