--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@
   @media (max-width: 800px) {
     
     .front p {
-      font-size: 90px;
+      font-size: 70px;
       
     }
   }
@@ -693,6 +693,11 @@
     height: 110vh;
     overflow: hidden;
   }
+  @media (max-width: 1300px) {
+    .photo_aftertext{
+      height: 90vh;
+    }
+  }
   .photoblock {
     position: relative;
     left:25%;
@@ -706,7 +711,7 @@
     overflow: hidden;
     margin-top: 100px;
   }
-  @media (max-width: 1150px) {
+  @media (max-width: 1300px) {
     .photoblock{
       transform: scale(1.5);
       margin-top: 200px;
@@ -755,8 +760,8 @@
   @media (max-width: 1300px) {
     .invitation{
       height: 65vw;
-      margin-top: 10px;
-      margin-bottom: 40px;
+      margin-top: 50px;
+      margin-bottom: 20px;
     }
   }
   @media (max-width: 800px){
