--- a/style.css
+++ b/style.css
@@ -867,6 +867,11 @@
       margin-top: -250px;
     }
   }
+  @media (max-width: 500px) {
+    .kontakt {
+      margin-top: -30px;
+    }
+  }
   
   .hallo h1 {
     font-size: clamp(40px, 4vw, 75px);
