--- a/style.css
+++ b/style.css
@@ -259,6 +259,7 @@
       height: 120vh;
       padding-top: 100px;
       width: auto;
+    
       
     }
   
@@ -272,7 +273,9 @@
       overflow: hidden;
       text-align: center;
       font-size: 110px;
-      margin-bottom: -80px;
+   
+      
+      
       
     }
     
@@ -337,8 +340,8 @@
     .front {
       margin-top: -100px;
       margin-left: 0;
-      margin-bottom: 0px;
-      font-size: clamp(50px, 4vw, 60px);
+      margin-bottom: -80px;
+      font-size: 60px;
       text-align: center;
     }
     .front p {
@@ -399,7 +402,7 @@
     flex-wrap: nowrap;
   }
   
-  .project h2 {
+  .project p {
     color: black;
     margin-bottom: 5rem;
     font-family: 'Sofia Sans', sans-serif;
@@ -409,8 +412,8 @@
     width: 80vw;
   }
   @media (max-width: 1000px) {
-    .project h2 {
-      font-size: 7vw;
+    .project p {
+      font-size: 4vw;
     }
   }
   
@@ -915,6 +918,36 @@
     color: #3d3d3d;
     font-size: clamp(20px, 4vw, 40px);
     margin-bottom: 200px;
+  }
+
+  .message-success {
+    display: none;
+    position: relative;
+    width: 100%;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-family: var(--roboto);
+    color: #3d3d3d;
+    font-size: clamp(10px, 4vw, 20px);
+    margin-bottom: 200px;
+    font-style: italic;
+    text-align: center;
+   
+  }
+
+  .message-error {
+    display: none;
+   
+    position: relative;
+    width: 100%;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-family: var(--roboto);
+    color: #3d3d3d;
+    font-size: clamp(10px, 4vw, 20px);
+    margin-bottom: 200px;
+    font-style: italic;
+    text-align: center;
   }
   
   @media (max-width: 1300px) {
