--- a/style.css
+++ b/style.css
@@ -89,11 +89,7 @@
     transform: rotate(-45deg) translate(35px, 35px);
   
   }
-  @media (max-width: 1300px) {
-    .navbar{
-      display: none;
-    }
-  }
+ 
   
   .new_menu {
     
@@ -110,6 +106,7 @@
   
   }
   .menu_items_burger {
+    
     display: flex;
     position: fixed;
     z-index: 3000;
@@ -117,7 +114,7 @@
   }
   .menu_items_burger ul{
    
-    background-color: transparent;
+  
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -137,6 +134,24 @@
   }
   
   
+  @media (max-width: 1300px) {
+    
+    .navbar{
+      display: none;
+    }
+    .menu_items_burger{
+      display: none;
+   
+    }
+    .items {
+      display: none;
+    }
+    .items li {
+      display: none;
+
+    }
+  }
+
   
   
   
@@ -850,10 +865,15 @@
       transform: scale(1.6);
     }
   }
+  @media (max-width: 950px) {
+    .perspective-text {
+      margin-bottom: 200px;
+    }
+  }
   @media (max-width: 550px){
     .perspective-text{
       transform: scale(1);
-      margin-bottom: 400px;
+      margin-bottom: 300px;
     }
   }
   .perspective-line {
@@ -907,6 +927,16 @@
     transform: translate(0, -50px);
   }
   
+  .menu_hidden {
+    display: none;
+  }
+  
+  /* Add media query for larger screens */
+  @media (min-width: 1301px) {
+    .menu_hidden {
+      display: flex;
+    }
+  }
   
   
   .kontakt {
@@ -918,6 +948,7 @@
     color: #3d3d3d;
     font-size: clamp(20px, 4vw, 40px);
     margin-bottom: 200px;
+    z-index: 10000;
   }
 
   .message-success {
