--- a/style.css
+++ b/style.css
@@ -1325,3 +1325,20 @@
     font-size: 20px;
     }
   }
+
+.datenschutz,
+.impressum {
+  display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 10px;
+    font-family: 'Sofia Sans', sans-serif;
+    font-size: 20px;
+    width: 100%;
+    height: auto;
+    text-decoration: none;
+    color: #3d3d3d;
+    margin-bottom: 100px;
+    padding: 50px 80px;
+}
