--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@
   .portfolio {
     overflow: hidden;
     
-    margin-bottom: -200px;
+    margin-bottom: -250px;
   }
   
   .project {
@@ -439,7 +439,7 @@
   }
 
   .work_list {
-    margin-top:200px;
+    margin-top:75px;
   }
   
   .website1-container,
@@ -450,7 +450,7 @@
   
     max-width: 55rem;
     aspect-ratio: 16/9;
-    margin-bottom: 150px;
+    margin-bottom: 75x;
   }
 
   
@@ -849,7 +849,7 @@
       flex-direction: column-reverse;
       gap: 0;
      
-      margin-top: 25px;
+      margin-top: 75px;
     }
     .photo_title{
       
@@ -865,8 +865,8 @@
       width: 80vw;
     }
     .photo{
-      padding-top: 100px;
-      margin-left: 10%;
+      padding-top: 75px;
+      margin-left: 35%;
     }
     .photo img{
       height: 80vw;
@@ -884,7 +884,7 @@
     flex-wrap: nowrap;
     text-align: center;
     overflow: hidden;
-    margin-bottom: 120px;
+    margin-bottom: 75px;
   }
   
   .paragraph {
