--- a/style.css
+++ b/style.css
@@ -418,6 +418,11 @@
     
     margin-bottom: -150px;
   }
+  @media(max-width:900px){
+    .portfolio {
+      margin-bottom: -250px;
+    }
+  }
   
   .project {
     display: flex;
