--- a/style.css
+++ b/style.css
@@ -420,7 +420,7 @@
   }
   @media(max-width:900px){
     .portfolio {
-      margin-bottom: -250px;
+      margin-bottom: -170px;
     }
   }
   
@@ -456,7 +456,7 @@
     
     max-width: 55rem;
     aspect-ratio: 16/9;
-    margin-bottom: 150px;
+    margin-bottom: 70px;
   }
 
   
@@ -501,6 +501,8 @@
     overflow: hidden;
     aspect-ratio: 16/9;
   }
+
+
   
   .overlay {
     position: absolute;
@@ -981,8 +983,8 @@
   
   .invitation {
    
-    margin-top: 100px;
-  
+    margin-top: 180px;
+    margin-bottom: -100px;
     height: 40vw;
     display: flex;
     align-items: center;
@@ -994,14 +996,15 @@
   @media (max-width: 1300px) {
     .invitation{
       height: 65vw;
-      margin-top: 50px;
+      margin-top: 150px;
       margin-bottom: 0px;
     }
   }
   @media (max-width: 800px){
     .invitation {
-      height: 90vw;
-      
+      height: 400px;
+      margin-top: 50px;
+     
     }
   }
   .perspective-text {
@@ -1111,7 +1114,7 @@
     color: #3d3d3d;
     font-size: clamp(20px, 4vw, 40px);
     margin-bottom: 200px;
-    z-index: 10000;
+   
   
   }
 
