--- a/style.css
+++ b/style.css
@@ -18,13 +18,14 @@ html {
     --contrast: #22211f;
     --midContrast: #4a4946;
     --lightContrast: #84837f;
-    --accentBlue: #2E5077;
+    --accentBlue: #6184D8;
     --baseline: 1.5rem;
     --vh: 100;
     --bp-xs:576px;
     --bp-sm:767px;
     --bp-md:991px;
     --bp-lg:1200px;
+    --secondaryFont: "Roboto", sans-serif;
 
 }
 
@@ -54,6 +55,7 @@ body {
 
 .main {
     min-height: 100vh;
+    overflow: hidden;
 }
 
 .header {
@@ -62,7 +64,6 @@ body {
     left: 0;
     width:100%;
     z-index: 500;
-    transition: .5s cubic-bezier(1,0,0,1);
     border-bottom: 1px solid transparent;
     background-color: transparent;
 }
@@ -101,10 +102,24 @@ img {
    
 }
 .header {
-    height: calc(var(--baseline)*3);
-    display: block;
-    pointer-events: none;
+  height: calc(var(--baseline)*3);
+  display: block;
+  pointer-events: none;
+  visibility: hidden;
 }
+
+
+.header.fixed {
+  position: fixed;
+  visibility: visible;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--bs-body-bg);
+  border-bottom: 1px solid var(--accentBlue);
+  pointer-events: auto;
+}
+
 
 
 .header__main, .header__section {
@@ -116,8 +131,8 @@ img {
     pointer-events: all;
 }
 
-.header__section {
-    align-items: end;
+.header__section h4{
+    margin:0;
 }
 
 .background-text-wrapper {
@@ -220,7 +235,7 @@ text {
     letter-spacing: 6px;
     animation: rotate 25s linear infinite;
     transform-origin: 250px 250px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: var(--secondaryFont);
     font-weight:900;
   }
   
@@ -247,6 +262,7 @@ text {
 p, ul {
     margin-bottom: 1.5rem;
     margin-bottom: calc(var(--baseline)*1);
+    font-family: var(--secondaryFont);
 }
 
 .scroll-arrow--vertical {
@@ -299,8 +315,11 @@ p, ul {
     z-index: 999; 
     transition: left 0.3s ease;
 }
+.nav__container a:hover{
+    color: var(--accent);
+}
 
-@media (max-width: 700px) {
+@media (max-width: 991px) {
     .nav {
         display: none;
     }
@@ -348,6 +367,9 @@ p, ul {
         flex-direction: column;
         gap: 80px;
         font-size: var(--baseline);
+      }
+      .burger__nav__container:hover {
+        color: var(--accent);
       }
     
 }
@@ -444,7 +466,7 @@ p, ul {
    align-items: start;
    justify-content: space-between;
    gap:calc(var(--baseline)*3);
-   margin-bottom: calc(var(--baseline)*5);
+   margin-bottom: calc(var(--baseline)*3);
   
 }
 
@@ -524,7 +546,7 @@ p, ul {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 200px;
+    gap: calc(var(--baseline)*5);
 }
 .about-me__content {
     position: relative;
@@ -535,7 +557,7 @@ p, ul {
     aspect-ratio: 4 / 5;
     width: 15vw;
     border-radius: 8px;
-    background-color: var(--bgContrast);
+    background-color: var(--lightBgContrast);
     min-width: 150px;
     max-width: 700px;
 }
@@ -569,10 +591,13 @@ p, ul {
         padding-left: calc(var(--baseline) * 0.5);
         padding-right: calc(var(--baseline) * 0.5);
 }
+    .about-me__text {
+        text-align: start;
+    }
 }
 
 h3 {
-    margin-bottom: calc(var(--baseline)*2);
+    margin-bottom: calc(var(--baseline)*1);
 }
 
 .perspective-text__container {
@@ -580,7 +605,7 @@ h3 {
     display: flex;
     justify-content: center;
     align-items: start;
-    padding-top: calc(var(--baseline)*3);
+    padding-top: calc(var(--baseline)*1);
 }
 
 .perspective-text__size {
@@ -590,10 +615,9 @@ h3 {
     left: 0;
 }
 .perspective-text {
-    color: red;
-    font-family: Arial;
+    color: var(--midContrast);
     font-size: 58px;
-    font-weight: 900;
+    font-weight: 400;
     letter-spacing: -2px;
     text-transform: uppercase;
     height: auto;
@@ -617,6 +641,7 @@ h3 {
     height: 50px;
     line-height: 50px;
     transition: all 0.5s ease-in-out;
+    font-family: "Caprasimo", serif;
 }
 
   .perspective-line:nth-child(odd) {
@@ -637,12 +662,11 @@ h3 {
   .perspective-line:nth-child(3) {
     left: 87px;
   }
-  .perspective-line:nth-child(4) {
-    left: 116px;
-  }
-  .perspective-line:nth-child(5) {
-    left: 145px;
-  }
+.together {
+    color: var(--accentBlue);
+}
+ 
+
 
   p {
     transition: all 0.5s ease-in-out;
@@ -666,15 +690,12 @@ h3 {
   
     white-space: nowrap;
     position: static;
-    font-size: clamp(35px, 4vw, 60px);
+    font-size: clamp(25px, 4vw, 30px);
     padding-right: 150px;
     
   }
   
   @media (max-width: 350px) {
-    .hallo h1{
-      font-size: 30px;
-    }
     .form-control label {
       font-size: 30px;
     }
@@ -689,7 +710,7 @@ h3 {
     padding-top: 20px;
     
     width: 70%;
-    border-bottom: 1x solid #3d3d3d;
+    border-bottom: 1x solid black;
     font-size: clamp(6px, 4vw, 16px);
     border-top: none;
     border-left: none;
@@ -703,8 +724,7 @@ h3 {
   }
   
   .form-control input::placeholder {
-    font-family: var(--roboto);
-    color: rgb(142, 140, 140);
+    color: var(--bgContrast);
     padding-left: 5px;
   
   }
@@ -745,11 +765,15 @@ h3 {
     width: 150px;
     border-radius: 50%;
     border: none;
-    background:rgba(12,189,241,1);
+    background: var(--accentBlue);
     text-align: center;
     transition: .3s ease;
     font-size: 20px;
-    color: white;
+    color: var(--bgContrast);
+  }
+  button p {
+    margin: 0;
+    padding: 0;
   }
   
   button:hover {
@@ -766,7 +790,7 @@ h3 {
   }
   
   .message label {
-    font-size: clamp(40px, 4vw, 75px);
+    font-size: clamp(25px, 4vw, 30px);
   }
   @media (max-width: 350px) {
     .message label {
@@ -783,7 +807,7 @@ h3 {
   .message textarea {
     padding-top: 20px;
     padding-left: 5px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid var(--midContrast);
     height: 200px;
     font-size: 16px;
     background: none;
@@ -792,7 +816,7 @@ h3 {
   
   .message textarea::placeholder {
     font-family: var(--roboto);
-    color: rgb(142, 140, 140);
+    color: var(--bgContrast);
   }
 
   @media (min-width: 1301px) {
@@ -851,5 +875,44 @@ h3 {
       margin-top: 0;
     }
   }
+
+
+  .button {
+    border: 1px solid var(--accentBlue);
+    border-radius: 50px;
+    display: inline-block;
+    text-align: center;
+    background-color: transparent;
+    font-family: var(--secondaryFont);
+    color: var(--accentBlue);
+    padding: 1px 25px;
+    transition: .3s ease;
+    cursor: pointer;
+  }
+
+  .button:hover {
+    background-color: var(--accent);
+    color:var(--bgContrast);
+    border: 1px solid transparent;
+  }
+
+  .case-study {
+    --child:1;
+  }
+
+  .case-study:nth-of-type(var(--child)) .case-study__background {
+    background-color: green;
+  }
+
+  .pointer svg{
+    width: 30px;
+    fill: var(--accentBlue);
+  }
+
+  .scroll-arrow__content:hover svg {
+    fill: var(--accent);
+}
+
+
   
 
