--- a/style.sass
+++ b/style.sass
@@ -7,4 +7,5 @@
 @import "./elements/sass/about"
 @import "./elements/sass/perspectiveText"
 @import "./elements/sass/form"
+@import "./elements/sass/footer"
 
