--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ img {
 
 .h4,
 h4 {
-  font-weight: 700;
+  font-weight: 500;
   margin-bottom: 1.5rem;
   margin-bottom: calc(1.5rem * 1);
   font-size: 1.1rem;
@@ -245,8 +245,8 @@ text {
   letter-spacing: 6px;
   animation: rotate 25s linear infinite;
   transform-origin: 250px 250px;
-  font-family: "Roboto", sans-serif;
-  font-weight: 900;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
 }
 
 @keyframes rotate {
@@ -308,7 +308,7 @@ text {
   left: 100vw;
   width: 100%;
   height: 100%;
-  background-color: #84837f;
+  background-color: #f73c59;
   z-index: 999;
   transition: left 0.3s ease;
 }
@@ -616,7 +616,7 @@ text {
 }
 
 .together {
-  color: #6184D8;
+  color: #f73c59;
 }
 
 .form-control {
@@ -775,7 +775,6 @@ button:hover {
   font-family: var(--roboto);
   color: #3d3d3d;
   font-size: clamp(20px, 4vw, 40px);
-  margin-bottom: 200px;
 }
 
 .message-success,
